# quantum-magic

./: .gitignore  GAPS.md  README.md  REASONING.md  pyproject.toml
experiments/phase1_literature/: literature_map.md
experiments/phase2_model_selection/: comparison.md
experiments/phase3_exact_numerics/: run_falsification.py  run_growth.py  run_hardware.py  run_sandbox.py
experiments/phase4_holographic/: run_happy.py
experiments/phase5_response_law/: derivation.md  run_response_law.py  run_scaling.py
experiments/phase6_decision/: memo.md
src/mqhg/: __init__.py
src/mqhg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mqhg/analysis/: __init__.py  backreaction.py  plotting.py
src/mqhg/analytical/: __init__.py  response_law.py
src/mqhg/core/: __init__.py  gates.py  statevector.py
src/mqhg/hardware/: __init__.py  circuits.py  cost.py  fast_shadows.py  noise.py  shadows.py  sre_estimator.py
src/mqhg/io/: __init__.py  results.py
src/mqhg/measures/: __init__.py  entanglement.py  geometry.py  magic.py
src/mqhg/models/: __init__.py  approximate.py  growth.py  happy.py  sandbox.py
src/mqhg/states/: __init__.py  graph.py  hypergraph.py  random.py
tests/: test_analytical.py  test_entanglement.py  test_gates.py  test_hardware.py  test_magic.py  test_states.py
