[project]
name = "mqhg"
version = "0.1.0"
description = "Magic-Modulated Quantum Hypergraph Models of Emergent Gravity"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "jax[cpu]>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
